// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test ConfigSlider should work 1`] = `
<div>
  <div
    class="container"
  >
    <div>
      Mock Antd Slider
      <p>
        id: 
        mock-id
      </p>
      <p>
        min: 
        0
      </p>
      <p>
        max: 
        100
      </p>
      <p>
        step: 
        1
      </p>
      <p>
        value: 
        10
      </p>
      <button
        type="button"
      >
        onAfterChange
      </button>
      <button
        type="button"
      >
        onChange
      </button>
    </div>
  </div>
</div>
`;

exports[`test ConfigSlider should work 2`] = `
<div>
  <div
    class="container limit"
  >
    <div>
      Mock Antd Slider
      <p>
        id: 
        mock-id
      </p>
      <p>
        min: 
        0
      </p>
      <p>
        max: 
        100
      </p>
      <p>
        step: 
        1
      </p>
      <p>
        value: 
        7
      </p>
      <button
        type="button"
      >
        onAfterChange
      </button>
      <button
        type="button"
      >
        onChange
      </button>
    </div>
  </div>
</div>
`;

exports[`test ConfigSlider should work 3`] = `
<div>
  <div
    class="container limit"
  >
    <div>
      Mock Antd Slider
      <p>
        id: 
        mock-id
      </p>
      <p>
        min: 
        0
      </p>
      <p>
        max: 
        100
      </p>
      <p>
        step: 
        1
      </p>
      <p>
        value: 
        88
      </p>
      <button
        type="button"
      >
        onAfterChange
      </button>
      <button
        type="button"
      >
        onChange
      </button>
    </div>
  </div>
</div>
`;
